--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,10 @@
 NODE_ENV=development
 DEBUG=restapi:server
 PORT=3000
+
+DB_USER=root
+DB_PW=felix345
+DB_HOST=mysql-bornhater-sandbox.cw2c1azoeikq.us-west-2.rds.amazonaws.com
+DB_NAME=restapi
+DB_DEV=restapi_dev
+DB_TEST=restapi_test
