--- a/src/package.json
+++ b/src/package.json
@@ -16,10 +16,10 @@
     "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.9"
+    "sequelize": "^5.8.9",
+    "uuid4": "^1.1.4"
   }
 }
