first jest test

--- a/src/package.json
+++ b/src/package.json
@@ -3,23 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www --exec babel-node --presets @babel/preset-env"
+    "start": "nodemon ./bin/www --exec babel-node --presets @babel/preset-env",
+    "test": "NODE_ENV=test ./node_modules/.bin/jest tests --coverage"
   },
   "dependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jest": "^24.8.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.9",
     "uuid4": "^1.1.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5"
   }
 }
