--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www --exec babel-node --presets @babel/preset-env",
-    "test": "NODE_ENV=test ./node_modules/.bin/jest tests --coverage"
+    "test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/jest tests --coverage",
+    "migrate": "sequelize db:migrate",
+    "migrate:reset": "sequelize db:migrate:undo:all"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
@@ -13,10 +15,12 @@
     "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "http-status": "^1.3.2",
     "jest": "^24.8.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
+    "random-string": "^0.2.0",
     "sequelize": "^5.8.9",
     "uuid4": "^1.1.4"
   },
@@ -24,6 +28,10 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5"
+    "@babel/preset-env": "^7.4.5",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
+    "regenerator-runtime": "^0.13.2",
+    "supertest": "^4.0.2"
   }
 }
