--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
@@ -17,6 +18,7 @@
     "http-errors": "~1.6.2",
     "http-status": "^1.3.2",
     "jest": "^24.8.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
