--- a/src/.env
+++ b/src/.env
@@ -8,3 +8,7 @@ DB_HOST=mysql-bornhater-sandbox.cw2c1azoeikq.us-west-2.rds.amazonaws.com
 DB_NAME=restapi
 DB_DEV=restapi_dev
 DB_TEST=restapi_test
+
+# JWT CONFIG
+JWT_SECRET=secret
+JWT_EXPIRESIN=3600000
