--- a/src/package.json
+++ b/src/package.json
@@ -26,7 +26,8 @@
     "random-string": "^0.2.0",
     "redis": "^2.8.0",
     "sequelize": "^5.8.9",
-    "uuid4": "^1.1.4"
+    "uuid4": "^1.1.4",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
