배포환경에서만 sentry 가동

--- a/src/.env
+++ b/src/.env
@@ -12,3 +12,5 @@ DB_TEST=restapi_test
 # JWT CONFIG
 JWT_SECRET=secret
 JWT_EXPIRESIN=3600000
+
+SENTRY_DSN=https://2db3aa66d0fb4935bd4fe235ff3b30b3@sentry.io/1483053
