--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@sentry/node": "^5.4.0",
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "cookie-parser": "~1.4.3",
